<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Present Sir</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="sevendays_setting">Enable 7 Days of the Week</string>

    <string name="school_website_setting">Change website</string>
    <string name="school_website_setting_summary">Change URL of your website</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>


    <!-- Main Activity strings -->
    <string name="timetable">TimeTable</string>
    <string name="ulan_nurymov_gmail_com">http://www.rmit.edu.au</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">Website</string>
    <string name="school_website_snackbar">Please, set URL of your website in settings.</string>

    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Contact:</string>
    <string name="room_dialog">Location:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Homeworks Activity strings -->
    <string name="title_activity_homeworks">HomeworksActivity</string>
    <string name="homeworks">Tasks</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Desctiption</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_homework">Edit task</string>
    <string name="add_homework">Add task</string>
    <string name="deadline_snackbar">"Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>

    <!-- Teachers Activity strings -->
    <string name="teachers">Contacts</string>
    <string name="add_teacher">Add contact</string>
    <string name="edit_teacher">Edit contact</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>

    <!-- Exams Activity strings -->
    <string name="exams">Events</string>
    <string name="add_exam">Add event</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>


    <!-- Notification -->
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>
    <string name="welcome">Welcome you!</string>
</resources>