<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />

    </group>



    <item android:title="Communicate">

        <menu>
            <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="Share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rateus"
                android:title="Rate Us" />
            </group>
        </menu>
    </item>
    <item android:title="Profile">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="logout" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_aboutus"
                    android:title="About" />

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Setting"
        app:showAsAction="never" />

    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/schoolwebsitemenu"
            android:icon="@drawable/ic_baseline_open_in_browser_24"
            android:title="@string/school_website" />
    </group>

    <group android:id="@+id/menu_social"
        android:checkableBehavior="none">
        <item
            android:id="@+id/facebook"
            android:icon="@drawable/ic_baseline_open_in_browser_24"
            android:title="Facebook" />
    </group>

    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/exams" />

        <item
            android:id="@+id/teachers"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/teachers" />

        <item
            android:id="@+id/homework"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/homeworks" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/notes" />
    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:title="Settings" />
    </group>

</menu>